@@ -1,3 +1,6 @@
+[B]Version 1.1.2[/B]
+- Removed depdency on script.module.danishaddons
+
 [B]Version 1.1.1[/B]
 - Prepare for official repository
 
